--- a/src/mibg3/Admin/ändraInfoAgent.form
+++ b/src/mibg3/Admin/ändraInfoAgent.form
@@ -25,7 +25,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="11" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -198,11 +198,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xc4;ndra"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="&#xe4;ndraOmr&#xe5;deKnappActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="&#xe4;ndraTelKnapp">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#xc4;ndra"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="&#xe4;ndraTelKnappActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="&#xe4;ndraL&#xf6;senKnapp">
       <Properties>
